{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 495,
  "lineage": "10093932-e9c6-7ac8-1015-3e392324df6f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e28397ed1c422f6d",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-19-155-9.us-east-2.compute.amazonaws.com",
            "public_ip": "3.19.155.9",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb-perovss",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:665302127377:loadbalancer/elb-perovss",
            "availability_zones": [
              "us-east-2a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-perovss-614182158.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 15,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 10
              }
            ],
            "id": "elb-perovss",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb-perovss",
            "security_groups": [
              "sg-01ad9271bc44d1e05"
            ],
            "source_security_group": "665302127377/netology-sg",
            "source_security_group_id": "sg-01ad9271bc44d1e05",
            "subnets": [
              "subnet-04e9abf71ad14933e"
            ],
            "tags": {
              "Name": "elb-perovss"
            },
            "tags_all": {
              "Name": "elb-perovss"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "netology-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:internet-gateway/igw-0019e473a4b0f2b46",
            "id": "igw-0019e473a4b0f2b46",
            "owner_id": "665302127377",
            "tags": {
              "Name": "netology-gw"
            },
            "tags_all": {
              "Name": "netology-gw"
            },
            "vpc_id": "vpc-01490ddda7bdb170f"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "netology-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e28397ed1c422f6d",
            "connectivity_type": "public",
            "id": "nat-000846e4bd25ef801",
            "network_interface_id": "eni-0222cd8821b84c8b1",
            "private_ip": "172.31.33.60",
            "public_ip": "3.19.155.9",
            "subnet_id": "subnet-04e9abf71ad14933e",
            "tags": {
              "Name": "netology-nat-gw"
            },
            "tags_all": {
              "Name": "netology-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:route-table/rtb-033e350a0a41fea09",
            "id": "rtb-033e350a0a41fea09",
            "owner_id": "665302127377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-000846e4bd25ef801",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route"
            },
            "tags_all": {
              "Name": "private-route"
            },
            "vpc_id": "vpc-01490ddda7bdb170f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.netology-nat-gw",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:route-table/rtb-07cf49293c907fa8b",
            "id": "rtb-07cf49293c907fa8b",
            "owner_id": "665302127377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0019e473a4b0f2b46",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "tags_all": {
              "Name": "public-route"
            },
            "vpc_id": "vpc-01490ddda7bdb170f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.netology-gw",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "netology-rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c41d81326638236",
            "route_table_id": "rtb-07cf49293c907fa8b",
            "subnet_id": "subnet-04e9abf71ad14933e"
          },
          "dependencies": [
            "aws_internet_gateway.netology-gw",
            "aws_route_table.public-route",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "netology-rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f41e59d83a19e982",
            "route_table_id": "rtb-033e350a0a41fea09",
            "subnet_id": "subnet-088b7693150728595"
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_nat_gateway.netology-nat-gw",
            "aws_route_table.private-route",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "netology-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:security-group/sg-01ad9271bc44d1e05",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ad9271bc44d1e05",
            "ingress": [],
            "name": "netology-sg",
            "name_prefix": "",
            "owner_id": "665302127377",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01490ddda7bdb170f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netology-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:security-group/sg-022fecb8f7a7c07fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022fecb8f7a7c07fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Incoming VPN connection",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpn-netology-sg",
            "name_prefix": "",
            "owner_id": "665302127377",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01490ddda7bdb170f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-691467478",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01ad9271bc44d1e05",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-1200680457",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-01ad9271bc44d1e05",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2679941475",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01ad9271bc44d1e05",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.netology-sg",
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:subnet/subnet-088b7693150728595",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.64.0/19",
            "id": "subnet-088b7693150728595",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665302127377",
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-01490ddda7bdb170f"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:subnet/subnet-04e9abf71ad14933e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.32.0/19",
            "id": "subnet-04e9abf71ad14933e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665302127377",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-01490ddda7bdb170f"
          },
          "dependencies": [
            "aws_vpc.netology-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "netology-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:665302127377:vpc/vpc-01490ddda7bdb170f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-02c53e1ef90321922",
            "default_route_table_id": "rtb-0c5d609141a0863d3",
            "default_security_group_id": "sg-0cfec9bb757bd5ab8",
            "dhcp_options_id": "dopt-049d38c7b7d5ee743",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01490ddda7bdb170f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c5d609141a0863d3",
            "owner_id": "665302127377",
            "tags": {
              "Name": "netology-vpc"
            },
            "tags_all": {
              "Name": "netology-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}